--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -1,17 +1,26 @@
 <ion-view view-title="Search">
   <ion-content class="has-header">
-	 
-	<ion-search-bar placeholder="Search..."></ion-search-bar>
+	<form ng-submit="doSearch()">
+		<div class="search-bar bar bar-header item-input-inset">
+        <label class="item-input-wrapper">
+          <i class="icon ion-ios-search placeholder-icon"></i>
+          <input type="search" placeholder="Search on Youtube	" ng-model="search.value" ng-enter="doSearch()"> 
+        </label>
+        <button type="button" class="button button-clear button-positive" ng-show="search.focus" ng-click="cancelSearch()">
+          Cancel
+        </button>
+      </div>
+    </form>
   	<ion-list>
-		<div collection-repeat="item in result.items" divider-collection-repeat>
-		  <ion-item>
-		    <div>{{ item.snippet.title }}</div>
-		    <div>{{ item.snippet.publishedAt | date:'dd-MM-yyyy' }}</div>
-		  </ion-item>
-		</div>
+	  <ion-item class="item-thumbnail-left" collection-repeat="item in result.items" href="#/tab/video/{{item.id.videoId}}">
+	  	<img src="{{ item.snippet.thumbnails.default.url }}">
+	    <h2> {{ item.snippet.title }}</h2>
+	    <p>{{ item.snippet.channelTitle }}</p>
+	  </ion-item>
 	</ion-list> 
-	<ion-infinite-scroll ng-if="listlength<=results.length" on-infinite="loadMore()" distance="3%">
-    </ion-infinite-scroll>
+	<div ng-show="(!result.items.length>1)">No Result Found</div>
+	<ion-infinite-scroll ng-if="moreDataCanBeLoaded()" on-infinite="searcMore()" distance="3%">
+    </ion-infinite-scroll>	
   </ion-content>
 </ion-view>
 
