--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,13 +3,13 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-striped tabs-background-assertive tabs-color-light">
+<ion-tabs class="tabs-striped tabs-background-assertive tabs-color-light tabs-icon-top">
 
   <ion-tab title="Home" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="/tab/home">
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="Search" icon-off="ion-ios-search-strong" icon-on="ion-ios-search" href="/tab/search">
+  <ion-tab title="Explore" icon-off="ion-ios-search-strong" icon-on="ion-ios-search" href="/tab/search">
     <ion-nav-view name="tab-search"></ion-nav-view>
   </ion-tab>
 
